# ar-project

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  ui.kv
mobile_app/: app.py  authorization_screen.py  learn_kivymd.py  main_app.py  profile_screen.py  route_display_screen.py  start_screen.py  start_window.py
neiro/eye/: create.py  datafromeqr.py
ui/: AuthorizationScreen.kv  CameraClick.kv  ProfileScreen.kv  RouteDisplayScreen.kv  StartScreen.kv  StartWindow.kv  learn_kivymd.kv
